--- a/T5-G2/t5/src/main/resources/lang/messages_en.properties
+++ b/T5-G2/t5/src/main/resources/lang/messages_en.properties
@@ -106,11 +106,12 @@ time_limit=Available time (in minutes):
 time_limit_no_min=Available time:
 
 # Messages for new achievement unlocked
-achievements_unlocked_title_en=Congratulations, you have unlocked new achievements
-achievements_unlocked_text_en=You have unlocked the following new achievements:
+achievements_unlocked_title=Congratulations, you have unlocked new achievements
+achievements_unlocked_text=You have unlocked the following new achievements:
+global_achievement_unlocked_text = Additionally, by winning this match, you have earned the following new achievements:
 
 # Messages for EndGame
-game_score=You have finished your game with a score of
+game_score=You have finished your game with a coverage of
 game_end=Game Over
 game_win=Congratulations, you won!
 game_lose=Too bad, the robot won this time.
@@ -122,11 +123,23 @@ game_retry=Try again and improve your strategy!
 
 # Achievements name and descriptions
 achievements_list=Achievements unlocked
+no_achievement_message=No achievements unlocked
+general=General
+
 # Achievement for PartitaSingola
 instructions_name=Coverage Master
 instructions_descr=Achieved by surpassing the robot in the number of covered instructions for the class under test.
 instructionsAndWeakMutation_name=Weak Mutation Conqueror
 instructionsAndWeakMutation_descr=Achieved by surpassing the robot in both covered instructions and the weakMutation metric
+firstMatchWon_text=Getting Started
+firstMatchWon_descr=Unlocked by winning your first match.
+thirdMatchWon_text=Finding Your Rhythm
+thirdMatchWon_descr=Unlocked by winning your third match.
+allBeatenOneClass_text=Class Completed
+allBeatenOneClass_descr=Unlocked by defeating all opponents in one class.
+allBeatenTwoClass_text=Double Class Mastery
+allBeatenTwoClass_descr=Unlocked by defeating all opponents in two classes.
+
 
 # T7/T8/apiGateway error 504 and 429
 error_429=The server is handling too many requests. Please wait a moment before trying again.
@@ -139,17 +152,27 @@ exp_next_level_label=XP for next level
 # Util_Editor.js console messages
 results=Results
 compilation_error=There were compilation errors, check the console!
-you_can_win=You can win the match!
+you_can_win=Well done! Your tests are already good enough. You can press Submit to beat the Robot, or try to improve code coverage by writing more tests!
+you_cant_win=You're almost there! The Robot's still ahead, but with a few more test cases, you can outsmart it. Keep going - you've got this!
+points_descr=Scroll down to see how your test coverage stacks up against the Robot's - who's winning the battle of the bugs?
 your_points=Your score
 robot_points=Robot score
-your_evosuite_points=Your EvoSuite score
-robot_evosuite_points=Robot EvoSuite score
+your_evosuite_points=Your score
+robot_evosuite_points=Robot score
 coverage_capitalized=Coverage
 lines=line
 instructions=instruction
 covered=covered
 missed=missed
+metrics=Metrics
+you=You
+robot_title=Robot
 
 # Modal button text
 close=Close
 go_to_home=Go to home
+
+# Modal text message
+end_time_title=Oh no! Time's up!
+end_time_message=Do you want to submit the current code or keep the last compiled one?
+
