--- a/T5-G2/t5/src/main/resources/lang/messages_es.properties
+++ b/T5-G2/t5/src/main/resources/lang/messages_es.properties
@@ -106,8 +106,9 @@ time_limit=Tiempo disponible:
 time_limit_no_min=Tiempo disponible:
 
 # Messages for new achievement unlocked
-achievements_unlocked_title_es=Â¡Felicidades, has desbloqueado nuevos logros!
-achievements_unlocked_text_es=Has desbloqueado los siguientes logros:
+achievements_unlocked_title=Â¡Felicidades, has desbloqueado nuevos logros!
+achievements_unlocked_text=Has desbloqueado los siguientes logros:
+global_achievement_unlocked_text = Además, al ganar esta partida, has conseguido los siguientes nuevos logros:
 
 # Messages for EndGame
 game_score=Has terminado tu partida con una puntuaciÃ³n
@@ -122,11 +123,22 @@ game_retry=Â¡Vuelve a intentarlo y mejora tu estrategia!
 
 # Achievements name and descriptions
 achievements_list=Logros obtenidos
+no_achievement_message=No se ha desbloqueado ningún logro
+general=Genéricos
+
 # Achievement for PartitaSingola
 instructions_name = Maestro de Cobertura
 instructions_descr = Obtenido superando al robot en el nÃºmero de instrucciones cubiertas para la clase bajo prueba.
 instructionsAndWeakMutation_name = Conquistador de Weak Mutation
 instructionsAndWeakMutation_descr = Obtenido superando al robot tanto en el nÃºmero de instrucciones cubiertas como en la mÃ©trica weakMutation.
+firstMatchWon_text=Primeros pasos
+firstMatchWon_descr=Obtenido al ganar tu primera partida.
+thirdMatchWon_text=Encontrando tu ritmo
+thirdMatchWon_descr=Obtenido al ganar tu tercera partida.
+allBeatenOneClass_text=Clase completada
+allBeatenOneClass_descr=Obtenido al vencer a todos los oponentes de una clase.
+allBeatenTwoClass_text=Dominio doble de clase
+allBeatenTwoClass_descr=Obtenido al vencer a todos los oponentes de dos clases.
 
 # T7/T8/apiGateway error 504 and 429
 error_429=El servidor estÃ¡ gestionando demasiadas solicitudes. Por favor, espera un momento antes de intentarlo nuevamente.
@@ -139,17 +151,27 @@ exp_next_level_label=XP para el siguiente nivel
 # Util_Editor.js console messages
 results=Resultados
 compilation_error=Hubo errores de compilación, ¡revisa la consola!
-you_can_win=¡Puedes ganar la partida!
+you_can_win=¡Bien hecho! ¡Tus pruebas ya son lo suficientemente buenas! Puedes presionar Enviar para vencer al Robot, o intentar mejorar la cobertura del código escribiendo más pruebas.
+you_cant_win=¡Ya casi lo logras! El Robot todavía está adelante, pero con unos pocos más casos de prueba, podrás superarlo. ¡Sigue así, lo tienes!
+points_descr=Desplázate hacia abajo para ver cómo se compara tu cobertura de pruebas con la del Robot ? ¿quién está ganando la batalla contra los bugs?
 your_points=Tu puntuación
 robot_points=Puntuación del robot
-your_evosuite_points=¡Tu puntuación de EvoSuite!
-robot_evosuite_points=¡Puntuación de EvoSuite del robot!
+your_evosuite_points=Tu puntuación
+robot_evosuite_points=Puntuación del robot
 coverage_capitalized=Cobertura
 lines=líneas
 instructions=instrucciones
 covered=cubiertas
 missed=perdidas
+metrics=Métricas
+you=Tú
+robot_title=Robot
+
 
 # Modal button text
 close=Cerrar
 go_to_home=Ir al inicio
+
+# Modal text message
+end_time_title=¡Oh no! ¡Se acabó el tiempo!
+end_time_message=¿Quieres enviar el código actual o mantener el último compilado?
