--- a/T5-G2/t5/src/main/resources/lang/messages_it.properties
+++ b/T5-G2/t5/src/main/resources/lang/messages_it.properties
@@ -112,7 +112,7 @@ achievements_unlocked_title=Complimenti, hai sbloccato dei nuovi achievements
 achievements_unlocked_text=Hai sbloccato i seguenti nuovi achievements:
 
 # Messages for EndGame
-game_score=Hai terminato la tua partita con un punteggio
+game_score=Hai terminato la tua partita con una copertura di
 game_end=Partita terminata
 game_win=Complimenti, hai vinto!
 game_lose=Peccato, il robot ha vinto questa volta.
@@ -124,11 +124,22 @@ game_retry=Riprova e migliora la tua strategia!
 
 # Achievements name and descriptions
 achievements_list=Achievements ottenuti
+no_achievement_message=Nessun achievement sbloccato
+general=Generici
+
 # Achievement for PartitaSingola
 instructions_name=Maestro della Copertura
 instructions_descr=Ottenuto superando il robot nel numero di istruzioni coperte per la classe sotto test.
 instructionsAndWeakMutation_name=Signore delle Weak Mutation
 instructionsAndWeakMutation_descr=Ottenuto superando il robot sia nel numero di istruzioni coperte che nella metrica weakMutation.
+firstMatchWon_text=Primi passi
+firstMatchWon_descr=Ottenuto vincendo la tua prima partita.
+thirdMatchWon_text=In ritmo
+thirdMatchWon_descr=Ottenuto vincendo la tua terza partita.
+allBeatenOneClass_text=Classe completata
+allBeatenOneClass_descr=Ottenuto superando tutti gli avversari di una classe.
+allBeatenTwoClass_text=Doppia padronanza
+allBeatenTwoClass_descr=Ottenuto superando tutti gli avversari di due classi.
 
 # T7/T8/apiGateway error 504 and 429
 error_429=Il server sta gestendo un numero elevato di richieste. Ti preghiamo di attendere un momento prima di riprovare.
@@ -141,17 +152,26 @@ exp_next_level_label=XP per il prossimo livello
 # Util_Editor.js console messages
 results=Risultati
 compilation_error=Ci sono stati errori di compilazione, controlla la console!
-you_can_win=Puoi vincere la partita!
+you_can_win=Bravo! I tuoi test sono già abbastanza buoni. Puoi premere Submit per batter il Robot, oppure provare a migliorare la copertura del codice scrivendo altri test!
+you_cant_win=Ci sei quasi! Il Robot è ancora in vantaggio, ma lo stai raggiungendo in fretta. Aggiungi qualche test case in più alla tua suite e conquista la vittoria - i bug non hanno scampo!
+points_descr=In basso trovi il dettaglio dei livelli di copertura raggiunti sia dai tuoi test che da quelli del Robot - Chi vincerà la battaglia dei Bug?
 your_points=Il tuo punteggio
 robot_points=Il punteggio del robot
-your_evosuite_points=Il tuo punteggio EvoSuite!
-robot_evosuite_points=Il punteggio EvoSuite del robot!
+your_evosuite_points=Il tuo punteggio
+robot_evosuite_points=Il punteggio del robot
 coverage_capitalized=Copertura
 lines=linee
 instructions=istruzioni
 covered=coperte
 missed=mancate
+metrics=Metriche
+you=Tu
+robot_title=Robot
 
 # Modal button text
 close=Chiudi
 go_to_home=Vai alla home
+
+# Modal text message
+end_time_title=Oh no! Il tempo è scaduto!
+end_time_message=Vuoi consegnare il codice corrente o mantenere l'ultimo compilato?
