Aggiornamento e Fix documentazione

--- a/wiki/developer/T4.md
+++ b/wiki/developer/T4.md
@@ -9,15 +9,15 @@ The module adopts a layered architecture, as is typical in classic Spring Boot R
 
 ```html
 [ Client ]
-   ↓
+   ⇕
 [ Controller ] → [ Exception Handler ]
-   ↓
-[ Mapper ↔ DTO ] // where needed
-   ↓
+   ⇕
+[ Mapper to/from DTO ] // where needed
+   ⇕
 [ Service ]
-   ↓
+   ⇕
 [ Repository ↔ Entity ]
-   ↓
+   ⇕
 [ Database ]
 
 ```
@@ -40,7 +40,6 @@ com.t4.gamerepo
 
 In details:
 1. `controller`: contains the REST controllers that expose the module's endpoints. The subpackage `advices` includes global exception handlers, for translating service-layer exceptions into appropriate HTTP responses).
-
 2. `mapper`. includes mapper classes responsible for transforming between DTOs and domain entities.
 3. `model`: contains the core domain model of the module. The subpackage `dto` holds all the Data Transfer Objects used for client interaction, while `repositories` includes Spring Data JPA repositories used for accessing and persisting entities in the database.
 4. `service`: contains the business logic of the module. Each service encapsulates a specific area of functionality, such as managing games, rounds, or player turns. The subpackage `exceptions` defines all the custom exceptions thrown by the service layer to signal domain-specific errors (e.g., invalid game state, missing round, etc.).
@@ -53,7 +52,7 @@ Games are managed using the following main entities:
 
 The available REST endpoints are documented in the accompanying OpenAPI specification referenced in this README.
 
-![gamerepo_er.png](documentation/gamerepo_er.png)
+![gamerepo_er.png](images/gamerepo_er.png)
 
 A **Game** entity is created when a new match begins. It includes:
 
@@ -76,5 +75,3 @@ A Game can consist of one or more **Turns**. Each **Turn** records:
 1. The ID of the player who took the turn;
 2. The result achieved by the player, in terms of both JaCoCo and EvoSuite metrics;
 3. A sequential number starting from 1, representing the unique index of the turn within the associated round.
-
-## Execution and properties
