Cleanup e aggiornamento documentazione

--- a/wiki/developer/T23.md
+++ b/wiki/developer/T23.md
@@ -11,6 +11,7 @@ com.example.db_setup
 ├── controller/
 │   ├── advice
 │   └── view
+├── filter/
 ├── interceptor/
 ├── language/
 ├── model/
@@ -27,14 +28,15 @@ In detail:
 1. The package `controller` contains the REST controllers that expose the module’s endpoints. 
 The subpackage `advice` includes global exception handlers, which translate service-layer exceptions into appropriate HTTP responses, 
 while the subpackage `view` contains controllers for handling view-based requests;
-2. The package `interceptor` contains the system’s interceptors and their related configurations;
-3. The package `language` provides all classes necessary for handling language switching and localization.
-4. The package `model` defines the core domain model of the module. 
+2. The package `filter` contains a simple logging filter for the HTTP request received by the microservice;
+3. The package `interceptor` contains the system’s interceptors and their related configurations;
+4. The package `language` provides all classes necessary for handling language switching and localization.
+5. The package `model` defines the core domain model of the module. 
 The subpackage `dto` holds all Data Transfer Objects used for communication with the client, 
 while the subpackage `repository` includes Spring Data JPA repositories for accessing and persisting entities in the database.
-5. The package `security` includes all classes related to implementing the system’s security. The subpackage `jwt` provides utilities and classes for JWT handling, 
+6. The package `security` includes all classes related to implementing the system’s security. The subpackage `jwt` provides utilities and classes for JWT handling, 
 while the subpackage `service` contains services for authentication and authorization.
-6. The package `service` contains the business logic of the module. Each service focuses on a specific area of functionality, such as user management or authentication. 
+7. The package `service` contains the business logic of the module. Each service focuses on a specific area of functionality, such as user management or authentication. 
    The subpackage `exception` defines all custom exceptions thrown by the service layer to indicate domain-specific errors.
 
 ## Authentication and JWT
