--- a/wiki/developer/T56.md
+++ b/wiki/developer/T56.md
@@ -20,10 +20,10 @@ com.g2
 │   └── GameController
 ├── interfaces
 │   └── util
+├── language
 ├── model
 │   └── dto
 ├── security
-├── service
 ├── session
 │   └── Exceptions
 ├── t5
@@ -44,9 +44,8 @@ In detail:
    centralized dispatcher, the **Service Manager**, to simplify call management. Its introduction allows developers to
    easily define and add new tasks to the front-end, quickly introduce new REST calls to existing services, and define
    various ways to leverage and combine available services efficiently.
-5. The package `model` contains the core domain model of the module. The subpackage `dto` holds all the Data Transfer Objects used for client and API interactions.
-6. The package `service` defines utility service used by the game engine, such as `FIleOperationUtils`, which handles the logging of each compilation executed by the users,
-   and `AchievementService`, which handle the logic to verify if the player, during the play, has unlocked new achievements;
+5. The package `language` provides all classes necessary for handling language switching and localization.
+6. The package `model` contains the core domain model of the module. The subpackage `dto` holds all the Data Transfer Objects used for client and API interactions.
 7. The package `session` handles the redis session;
 8. The package `t5` contains teh starting point of the application and the logic to handle the language change
 9. The package `util.achievements` defines the achievements unlockable by the player.
