--- a/wiki/developer/T8.md
+++ b/wiki/developer/T8.md
@@ -10,6 +10,7 @@ The module consists of a set of packages, as shown below:
 com.robotchallenge.t8
 ├── config
 ├── controller
+│ └── advice
 ├── dto
 │ └── request
 ├── service
@@ -17,10 +18,12 @@ com.robotchallenge.t8
 ```
 
 In detail:
-1. The package `controller` contains the REST controllers that expose the module’s endpoints;
+1. The package `controller` contains the REST controllers that expose the module’s endpoints. The subpackage `advice` 
+   includes global exception handlers, which translate service-layer unchecked exceptions into appropriate HTTP responses;
 2. The package `config` contains the system’s configurations to handle the concurrency;
 3. The package `dto`, and specifically its subpackage `request`, holds the Data Transfer Objects used for communication with the other services.
-4. The package `service` contains the business logic of the module.
+4. The package `service` contains the business logic of the module, while the `exception` subpackage defines a custom 
+   exception class used to wrap the checked exceptions thrown by the module and rethrow them as unchecked exceptions.
 5. The package `util` contains all the utility classes of the system.
 
 ## Available REST Endpoints
